#1 Add EventOptionUtility